added jumbotron css

--- a/src/components/quiver.css
+++ b/src/components/quiver.css
@@ -1,7 +1,8 @@
 .quiver {
     /* margin-top: 25px; */
     margin-bottom: 25px;
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
+    height: 100vh;
     background-color: #c6dbe7
     /* border: solid black 1px; */
 }
