--- a/src/components/search-bar.css
+++ b/src/components/search-bar.css
@@ -18,7 +18,7 @@ form {
 }
 .search-bar button {
     font-size: 20px;
-    color: #dddddd;
+    color: black
 }
 .search-bar select {
     background-color: #dddddd;
@@ -31,4 +31,7 @@ form {
 .search-bar .card {
     margin-left: auto;
     margin-right: auto;
+}
+.search-bar .card-header {
+    background-color: #dddddd;
 }
